Bug 359035 - message view and message list don't align vertically at bottom
Summary: message view and message list don't align vertically at bottom
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-05 17:17 UTC by Milian Wolff
Modified: 2016-02-29 20:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
screenshot of the issue (13.37 KB, image/png)
2016-02-05 17:17 UTC, Milian Wolff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2016-02-05 17:17:01 UTC
Minor visual annoyance that will make Nuno and others mad, I'm sure.

Reproducible: Always

Steps to Reproduce:
1. open an email without showing the message structure
2. observe the space below the message view

Actual Results:  
the message list and message view don't align at the bottom

Expected Results:  
the message list and message view _do_ align at the bottom

kf 5 build from master, breeze theme
Comment 1 Milian Wolff 2016-02-05 17:17:25 UTC
Created attachment 97020 [details]
screenshot of the issue
Comment 2 Milian Wolff 2016-02-05 17:17:47 UTC
The screenshot shows the issue at the right hand side.
Comment 3 Laurent Montel 2016-02-05 20:42:01 UTC
you're right :)
I will fix it soon.
Comment 4 Laurent Montel 2016-02-29 20:43:29 UTC
Git commit 0eb35cb95b9cd2f5c539eb42e655d9817f1c1043 by Montel Laurent.
Committed on 29/02/2016 at 20:43.
Pushed by mlaurent into branch 'master'.

Fix Bug 359035 - message view and message list don't align vertically at bottom

FIXED-IN: 5.2

M  +3    -0    src/slidecontainer.cpp

http://commits.kde.org/kpimtextedit/0eb35cb95b9cd2f5c539eb42e655d9817f1c1043