Fix Bug 359035 - message view and message list don't align vertically at bottom

FIXED-IN: 5.2
BUG: 359035